[FIX] Fix 17.0 attrs specific

--- a/l10n_ru_accounting_forms/views/res_partner.xml
+++ b/l10n_ru_accounting_forms/views/res_partner.xml
@@ -8,13 +8,13 @@
             <field name="company_type" position="after">
                 <field
                     name="company_l10n_ru_type"
-                    attrs="{'invisible': ['|',('country_code', '!=', 'RU'),('company_type', '!=', 'comapny')]}"
+                    invisible="country_code !='RU' and company_type != 'comapny'"
                 />
             </field>
             <field name="vat" position="after">
                 <field
                     name="kpp"
-                    attrs="{'invisible': ['|',('country_code', '!=', 'RU'),('company_type', '!=', 'comapny'), ('company_l10n_ru_type', '!=', 'individual_entrepreneur'),('company_l10n_ru_type', '!=', 'natural_person')]}"
+                    invisible="country_code !='RU' and company_type != 'comapny' and company_l10n_ru_type != 'individual_entrepreneur' and company_l10n_ru_type != 'natural_person'"
                 />
             </field>
         </field>
