--- a/l10n_ru_accounting_forms/views/res_company.xml
+++ b/l10n_ru_accounting_forms/views/res_company.xml
@@ -5,16 +5,13 @@
         <field name="model">res.company</field>
         <field name="inherit_id" ref="base.view_company_form" />
         <field name="arch" type="xml">
-            <field name="company_type" position="after">
-                <field
-                    name="company_l10n_ru_type"
-                    attrs="{'invisible': ['|',('country_code', '!=', 'RU'),('company_type', '!=', 'comapny')]}"
-                />
+            <field name="partner_id" position="after">
+                <field name="company_l10n_ru_type" invisible="country_code !='RU'" />
             </field>
             <field name="vat" position="after">
                 <field
                     name="kpp"
-                    attrs="{'invisible': ['|',('country_code', '!=', 'RU'),('company_type', '!=', 'comapny'), ('company_l10n_ru_type', '!=', 'individual_entrepreneur'),('company_l10n_ru_type', '!=', 'natural_person')]}"
+                    invisible="country_code != 'RU' and company_l10n_ru_type != 'individual_entrepreneur' and company_l10n_ru_type != 'natural_person'"
                 />
             </field>
         </field>
